logs/sam3d_5242721.err
  File "/dss/dsshome1/0D/ru47tac2/projects/segrap2025/SAM-Med3D/train.py", line 105
    ])
    ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '(' on line 102
